Add pulsing indicator to improve user engagement and interaction discovery
- Add red pulsing circle overlay positioned near the wheel slider area
- Implement smart behavior: appears on page load, disappears on first user interaction
- Include smooth scaling animation (1x to 1.3x) with 1.5s cycle and subtle glow effect
- Track user interaction through existing frame update system in accessibility.js
- Add helpful tooltip: "Move the wheel slider to explore the animation"
- Position indicator using absolute positioning with high z-index above canvas
- Addresses user feedback that students needed clearer visual cues to start interacting
- Maintains accessibility compliance and doesn't interfere with existing features
- One-time removal ensures clean interface after initial engagement

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@ function handleComplete(evt,comp) {
 
 		<!-- Canvas Animation -->
 		<div id="animation_container" style="background-color:#fff8e1; width:929px; height:652px">
+			<!-- Pulsing indicator for first-time users -->
+			<div id="pulse-indicator" class="pulse-circle" title="Move the wheel slider to explore the animation"></div>
+			
 			<canvas id="canvas" width="929" height="652" style="position: absolute; display: block; background-color:#fff8e1;" 
 					role="application" 
 					tabindex="0"
